--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>World Clock</h1>
     <footer>
       This project was coded by Alaa Helwani and is
-      <a href="" target="_blank">open sourced on GitHub</a>
+      <a href="https://github.com/Alaa-3/Plus-add-on-Ptoject" target="_blank"
+        >open sourced on GitHub</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
