Styled the project with CSS

--- a/index.html
+++ b/index.html
@@ -17,19 +17,23 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles 🇺🇸</h2>
-        <div class="date">August 15th 2024</div>
-        <div class="time">1:50:48 AM</div>
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">August 15th 2024</div>
+        </div>
+        <div class="time">1:50:48 <small>AM</small></div>
       </div>
 
       <div class="city">
-        <h2>Sydney 🇦🇺</h2>
-        <div class="date">August 15th 2024</div>
-        <div class="time">1:50:48 AM</div>
+        <div>
+          <h2>Sydney 🇦🇺</h2>
+          <div class="date">August 15th 2024</div>
+        </div>
+        <div class="time">1:50:48 <small>AM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded by Alaa Helwani and is
+      This project was coded with 🦋 by <strong>Alaa Helwani</strong> and is
       <a href="https://github.com/Alaa-3/Plus-add-on-Ptoject" target="_blank"
         >open sourced on GitHub</a
       >
