--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/index.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock - Alaa Helwani</title>
   </head>
   <body>
@@ -16,24 +18,24 @@
         <option value="">Auckland</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date">August 15th 2024</div>
+          <h2>Los Angeles</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">1:50:48 <small>AM</small></div>
+        <div class="time"></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="paris">
         <div>
-          <h2>Sydney 🇦🇺</h2>
-          <div class="date">August 15th 2024</div>
+          <h2>Paris</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">1:50:48 <small>AM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
-      This project was coded with 🦋 by <strong>Alaa Helwani</strong> and is
+      This project was coded by <strong>Alaa Helwani</strong> and is
       <a href="https://github.com/Alaa-3/Plus-add-on-Ptoject" target="_blank"
         >open sourced on GitHub</a
       >
